eval/results/raw/mirchecker_tests__utility__report_handle_macro.rs.txt
case_id: tests__utility__report_handle_macro.rs
tool: mirchecker
success: True
exit_code: 0
duration_sec: 3.777820
timeout: False

===== STDOUT =====
[0m[0m[1m[33mwarning[0m[1m:[0m apron octagons sources not found; skipping octagons backend
[0m[0m[1m[32m    Finished[0m dev [unoptimized + debuginfo] target(s) in 2.54s
[0m[1m[33mwarning[0m[0m[1m: type `X509_LOOKUP_METHOD` should have an upper camel case name[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0m/workspace/tests/_eval_runner/tests__utility__report_handle_macro.rs:31:10[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m31[0m[0m [0m[0m[1m[38;5;12m| [0m[0mpub enum X509_LOOKUP_METHOD {}[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m         [0m[0m[1m[33m^^^^^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[33mhelp: convert the identifier to upper camel case: `X509LookupMethod`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: `#[warn(non_camel_case_types)]` on by default[0m

[0m[1m[38;5;9merror[E0601][0m[0m[1m: `main` function not found in crate `tests__utility__report_handle_macro`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0m/workspace/tests/_eval_runner/tests__utility__report_handle_macro.rs:1:1[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m/[0m[0m [0m[0muse std::marker::PhantomData;[0m
[0m[1m[38;5;12m2[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0muse std::cell::UnsafeCell;[0m
[0m[1m[38;5;12m3[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m
[0m[1m[38;5;12m4[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0mpub struct Opaque(PhantomData<UnsafeCell<*mut ()>>);[0m
[0m[1m[38;5;12m...[0m[0m  [0m[0m[1m[38;5;9m|[0m
[0m[1m[38;5;12m46[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m    pub struct X509LookupMethodRef<T>;[0m
[0m[1m[38;5;12m47[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m}[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|_^[0m[0m [0m[0m[1m[38;5;9mconsider adding a `main` function to `/workspace/tests/_eval_runner/tests__utility__report_handle_macro.rs`[0m

[0m[1m[38;5;9merror[0m[0m[1m: aborting due to previous error; 1 warning emitted[0m

[0m[1mFor more information about this error, try `rustc --explain E0601`.[0m


===== STDERR =====
